# opm

./: README.md  pyproject.toml
opm/: manager.py  utils.py
opm/core/: host.py  manager.py  package.py
opm/hosts/nuke/: host.py  package.py
opm/hosts/nuke/startup/: init.py
opm/widgets/: browser.py  filter.py  tree.py
tests/: install.py  manager.py
