[project]
name = "qt-pydantic"
version = "0.1.0"
description = "Pydantic BaseModel Annotations for Qt"
authors = [
    {name = "Beat Reichenbach"}
]
dependencies = [
    "qtpy>=2.0,<3",
    "pydantic>=2.0,<3",
]
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "python-semantic-release>=9.0",
    "PySide6",
    "pytest>=8.0",
    "types-nuke"
]
pyside2 = ["PySide2"]
pyside6 = ["PySide6"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qt_pydantic"]

[tool.semantic_release]
version_variables = ["qt_pydantic/__init__.py:__version__"]
version_toml  = ["pyproject.toml:project.version"]

[tool.semantic_release.remote]
ignore_token_for_push = true

[tool.black]
skip-string-normalization = true
